Fixing issue with hero sections when on iphones so you can see the entire image not a zoomed in version of it.

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -18,7 +18,7 @@
   height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   z-index: -1;
 }
 
