--- a/src/components/about-route/AboutRoute.css
+++ b/src/components/about-route/AboutRoute.css
@@ -1,6 +1,6 @@
 /* About Route */
 .about-route-hero {
-  background-position: bottom;
+  background-position: center;
 }
 
 .about-route {
